--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -3,6 +3,14 @@
     margin: 0 5px;
 }
 
+.search {
+    margin: 4px 2px 0 5px;
+}
+
+.dvd {
+    margin: 4px 5px 0 5px;
+}
+
 .netflixLogo {
     margin-left: 30px;
     width: 150px;
