--- a/src/components/navbar.css
+++ b/src/components/navbar.css
@@ -2,8 +2,17 @@ nav {
     background: #141414;
 }
 
-a.nav-link {
+a.nav-link, a.navLink2:hover {
     color: #E5E5E5;
+}
+
+a.active, a.active:hover {
+    color: #FFFFFF;
+    font-weight: bold;
+}
+
+a.navLink:hover {
+    color: #b3b3b3;
 }
 
 .navbar {
