--- a/src/components/mainmovie.css
+++ b/src/components/mainmovie.css
@@ -1,6 +1,6 @@
 .imageContainer {
     width: 100%;
-    height: 600px;
+    max-height: 600px;
     overflow: hidden;
     position: relative;
 }
@@ -67,4 +67,109 @@
 
 .mainMovie {
     width: 100vw;
+    object-fit: cover;
+}
+
+@media (min-width: 200px) {
+    .imageContainer {
+        /* width: 100%;
+        max-height: 600px;
+        overflow: hidden;
+        position: relative; */
+        margin-top: 94px;
+    }
+
+    .movieTitle {
+        position: absolute;
+        bottom: 5px;
+        left: 20px;
+    }  
+    
+    .movieTitle > h1 {
+        font-size: 50px;
+    }
+    
+    .buttonMain {
+        visibility: hidden;
+    }
+    
+    .mainMovie {
+        width: 100vw;
+        object-fit: cover;
+    }
+}
+
+@media (min-width: 1000px) {
+    .imageContainer {
+        width: 100%;
+        max-height: 600px;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .movieTitle {
+        color: white;
+        position: absolute;
+        bottom: 200px;
+        left: 75px;
+    }  
+    
+    .movieTitle > h1 {
+        font-size: 100px;
+    }
+    
+    .buttonMain {
+        position: absolute;
+        bottom: 125px;
+        left: 80px;
+        visibility: visible;
+    }
+    
+    .playButton {
+        margin: 0 5px 0 0;
+        padding: 5px 15px;
+        font-size: 17px;
+        border: white;
+    }
+    
+    .playButton:hover {
+        border: rgba(255,255,255,0.75);
+        background-color: rgba(255,255,255,0.75);
+    }
+    
+    .playIcon {
+        margin: -5px 5px 0 0;
+    }
+    
+    .playText {
+        font-size: 20px;
+    }
+    
+    .infoIcon {
+        margin: -5px 5px 0 0;
+    }
+    
+    .infoText {
+        font-size: 20px;
+    }
+    
+    .moreInfoButton {
+        color: white;
+        border: rgba(109,109,110,0.7);
+        background-color: rgba(109,109,110,0.7);
+        margin: 0 0 0 5px;
+        padding: 0.5px 15px 3px 11px;
+        font-size: 25px;
+    }
+    
+    .moreInfoButton:hover {
+        color: white;
+        border: rgba(109,109,110,0.4);
+        background-color: rgba(109,109,110,0.4);;
+    }
+    
+    .mainMovie {
+        width: 100vw;
+        object-fit: cover;
+    }
 }
