--- a/src/components/mainmovie.css
+++ b/src/components/mainmovie.css
@@ -99,6 +99,82 @@
     }
 }
 
+@media (min-width: 600px) {
+    .imageContainer {
+        width: 100%;
+        max-height: 600px;
+        overflow: hidden;
+        position: relative;
+    }
+    
+    .movieTitle {
+        color: white;
+        position: absolute;
+        bottom: 65px;
+        left: 30px;
+    }  
+    
+    .movieTitle > h1 {
+        font-size: 75px;
+    }
+    
+    .buttonMain {
+        position: absolute;
+        bottom: 30px;
+        left: 30px;
+        visibility: visible;
+    }
+    
+    .playButton {
+        margin: 0 5px 0 0;
+        padding: 5px 15px;
+        font-size: 14px;
+        border: white;
+    }
+    
+    .playButton:hover {
+        border: rgba(255,255,255,0.75);
+        background-color: rgba(255,255,255,0.75);
+    }
+    
+    .playIcon {
+        margin: -5px 5px 0 0;
+    }
+    
+    .playText {
+        font-size: 17px;
+    }
+    
+    .infoIcon {
+        margin: 0;
+        height: .75em;
+    }
+    
+    .infoText {
+        font-size: 17px;
+    }
+    
+    .moreInfoButton {
+        color: white;
+        border: rgba(109,109,110,0.7);
+        background-color: rgba(109,109,110,0.7);
+        margin: 0 0 0 5px;
+        padding: 0px 15px 0.5px 11px;
+        font-size: 25px;
+    }
+    
+    .moreInfoButton:hover {
+        color: white;
+        border: rgba(109,109,110,0.4);
+        background-color: rgba(109,109,110,0.4);;
+    }
+    
+    .mainMovie {
+        width: 100vw;
+        object-fit: cover;
+    }
+}
+
 @media (min-width: 1000px) {
     .imageContainer {
         width: 100%;
@@ -110,7 +186,7 @@
     .movieTitle {
         color: white;
         position: absolute;
-        bottom: 200px;
+        bottom: 165px;
         left: 75px;
     }  
     
@@ -147,6 +223,7 @@
     
     .infoIcon {
         margin: -5px 5px 0 0;
+        height: 1em;
     }
     
     .infoText {
