--- a/src/components/api.css
+++ b/src/components/api.css
@@ -59,3 +59,198 @@
 .MoviesAndTVShows > img:hover {
     transform: scale(1.1);
 }
+
+@media (min-width: 200px) {
+    /* .netflixOrginalsSection {
+        color: white;
+        background-color: #141414;
+        text-align: left;
+        padding-top: 30px;
+    } */
+    
+    .netflixOrginalsTitle {
+        margin-left: 20px;
+    }
+    
+    /* .netflixOrginalsMoviesAndTVShows {
+        display: flex;
+        overflow-x: auto;
+        padding: 10px 0;
+    } */
+    
+    .netflixOrginalsMoviesAndTVShows > img:first-child {
+        margin: 15px 5px 15px 20px;
+    }
+    
+    /* .netflixOrginalsMoviesAndTVShows > img {
+        margin: 15px 5px;
+        transition: transform .2s;
+    } */
+    
+    /* .netflixOrginalsMoviesAndTVShows > img:hover {
+        transform: scale(1.1);
+    } */
+    
+    .Section {
+        color: white;
+        background-color: #141414;
+        text-align: left;
+        padding-top: 30px;
+    }
+    
+    .Title {
+        margin-left: 20px;
+    }
+    
+    /* .MoviesAndTVShows {
+        display: flex;
+        overflow-x: auto;
+        padding: 2px 0;
+    } */
+    
+    .MoviesAndTVShows > img:first-child {
+        border-radius: 5px;
+        margin: 10px 5px 10px 20px;
+    }
+    
+    /* .MoviesAndTVShows > img {
+        border-radius: 5px;
+        margin: 10px 5px;
+        transition: transform .2s;
+    }
+    
+    .MoviesAndTVShows > img:hover {
+        transform: scale(1.1);
+    } */
+    
+}
+
+@media (min-width: 600px) {
+    .netflixOrginalsSection {
+        color: white;
+        background-color: #141414;
+        text-align: left;
+        padding-top: 30px;
+    }
+    
+    .netflixOrginalsTitle {
+        margin-left: 54px;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows {
+        display: flex;
+        overflow-x: auto;
+        padding: 10px 0;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows > img:first-child {
+        margin: 15px 5px 15px 54px;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows > img {
+        margin: 15px 5px;
+        transition: transform .2s;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows > img:hover {
+        transform: scale(1.1);
+    }
+    
+    .Section {
+        color: white;
+        background-color: #141414;
+        text-align: left;
+        padding-top: 30px;
+    }
+    
+    .Title {
+        margin-left: 54px;
+    }
+    
+    .MoviesAndTVShows {
+        display: flex;
+        overflow-x: auto;
+        padding: 2px 0;
+    }
+    
+    .MoviesAndTVShows > img:first-child {
+        border-radius: 5px;
+        margin: 10px 5px 10px 54px;
+    }
+    
+    .MoviesAndTVShows > img {
+        border-radius: 5px;
+        margin: 10px 5px;
+        transition: transform .2s;
+    }
+    
+    .MoviesAndTVShows > img:hover {
+        transform: scale(1.1);
+    }
+    
+}
+
+@media (min-width: 1000px) {
+    .netflixOrginalsSection {
+        color: white;
+        background-color: #141414;
+        text-align: left;
+        padding-top: 30px;
+    }
+    
+    .netflixOrginalsTitle {
+        margin-left: 54px;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows {
+        display: flex;
+        overflow-x: auto;
+        padding: 10px 0;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows > img:first-child {
+        margin: 15px 5px 15px 54px;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows > img {
+        margin: 15px 5px;
+        transition: transform .2s;
+    }
+    
+    .netflixOrginalsMoviesAndTVShows > img:hover {
+        transform: scale(1.1);
+    }
+    
+    .Section {
+        color: white;
+        background-color: #141414;
+        text-align: left;
+        padding-top: 30px;
+    }
+    
+    .Title {
+        margin-left: 54px;
+    }
+    
+    .MoviesAndTVShows {
+        display: flex;
+        overflow-x: auto;
+        padding: 2px 0;
+    }
+    
+    .MoviesAndTVShows > img:first-child {
+        border-radius: 5px;
+        margin: 10px 5px 10px 54px;
+    }
+    
+    .MoviesAndTVShows > img {
+        border-radius: 5px;
+        margin: 10px 5px;
+        transition: transform .2s;
+    }
+    
+    .MoviesAndTVShows > img:hover {
+        transform: scale(1.1);
+    }
+    
+}
