--- a/src/components/api.css
+++ b/src/components/api.css
@@ -13,6 +13,12 @@
     display: flex;
     overflow-x: auto;
     padding: 10px 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.netflixOrginalsMoviesAndTVShows::-webkit-scrollbar {
+    display: none;
 }
 
 .netflixOrginalsMoviesAndTVShows > img:first-child {
@@ -43,6 +49,12 @@
     display: flex;
     overflow-x: auto;
     padding: 2px 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;
+}
+/* Hide scrollbar for Chrome, Safari and Opera */
+.MoviesAndTVShows::-webkit-scrollbar {
+    display: none;
 }
 
 .MoviesAndTVShows > img:first-child {
